feat: create jpa for postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/transactions
 spring.datasource.username=mantis
-spring.datasource.password=Texocotitla_3007
+spring.datasource.password=mantis
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
